--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Astroneat</title>
 </head>
 <body>
-    <a href="/counter">Counting</a>
+    <a href="./counter/index.html">Counting</a>
 </body>
 </html>
