Changed to CounterAPI

--- a/counter/index.html
+++ b/counter/index.html
@@ -12,7 +12,9 @@
             <p>Let's see how far we can go</p>
         </div>
 
-        <div id="count"></div>
+        <div id="count">
+            ...
+        </div>
 
         <div id="btn">
             <button onclick="countup()">Contribute!</button>
