forgot to add to html lmao

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Astroneat</title>
 </head>
 <body>
-    <a href="./counter/index.html">Counting</a>
+    <h1>Astroneat's personal garbage can</h1>
+    <a href="./counter/counter.html">Counting</a>
+    <br>
+    <a href="./minesweeper/index.html">Minesweeper</a>
 </body>
 </html>
