--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>Astroneat's personal garbage can</h1>
-    <a href="./counter/counter.html">Counting</a>
-    <br>
     <a href="./minesweeper/index.html">Minesweeper</a>
+    <br>
+    <a href="./tetris/index.html">Tetris</a>
 </body>
 </html>
