add bad rain sim

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>Astroneat's personal garbage can</h1>
     <a href="./minesweeper/index.html">Minesweeper</a>
     <br>
-    <a href="./tetris/index.html">Tetris</a>
+    <a href="./chill/index.html">really bad rain simulator</a>
+    <!-- <br> -->
+    <!-- <a href="./tetris/index.html">Tetris</a> -->
 </body>
 </html>
