--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -20,6 +20,8 @@
                     <option value="intermediate">Intermediate</option>
                     <option value="expert">Expert</option>
                 </select>
+                <label for="leniency">Leniency: </label>
+                <input type="number" min="0" max="100" value="50">
                 <input type="button" id="btnStart" value="Start" onclick="start_game()">
             </div>
 
