--- a/chill/index.html
+++ b/chill/index.html
@@ -8,15 +8,15 @@
 </head>
 <body onload="init_variables()">
     <div style="position: fixed; top: 1vh; left: 1vw;">
-        <a href="../index.html" style="text-decoration: none; color: darkblue; font-family: Arial, Helvetica, sans-serif; font-weight: bold; font-size: 18px;"><< Home</a>
+        <a href="../index.html" style="text-decoration: none; color: aliceblue; font-family: Arial, Helvetica, sans-serif; font-weight: bold; font-size: 18px;"><< Home</a>
     </div>
 
     <div id="settings">
     </div>
     
-    <!-- <div id="lofi_div">
+    <div id="lofi_div">
         <iframe id="lofi" width="240" height="135" src="https://www.youtube.com/embed/jfKfPfyJRdk?si=6Gy0C_3Y-u-7ATjR" title="Lo-fi Girl Stream" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"></iframe>
-    </div> -->
+    </div>
 
     <div id="rain"></div>
     <div id="trail"></div>
