--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Astroneat's personal garbage can</h1>
     <a href="./minesweeper/index.html">Minesweeper</a>
     <br>
-    <a href="./chill/index.html">really bad rain simulator</a>
+    <a href="./chill/index.html">starry night</a>
     <!-- <br> -->
     <!-- <a href="./tetris/index.html">Tetris</a> -->
 </body>
